# MIDIDiff

./: .sourcery.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  ROADMAP.md  SOURCERY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  release.yml  test.yml
docs/: index.rst  shell-completions.rst  testing.rst  usage.rst
midi_diff/: __init__.py  __main__.py  cli.py  core.py  midi_utils.py
midi_diff/cli/: __init__.py  __main__.py  completions.py  docs.py  main.py  version.py
