[tool.poetry]
name = "midi-diff"
version = "1.0.0-alpha.2"
description = "Output the differences between two MIDI files, using the command-line."
authors = ["Taylor-Jayde Blackstone <t.blackstone@inspyre.tech>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
mido = ">=1.3.3,<2.0.0"
rich = { version = ">=13.0.0,<14.0.0", optional = true }

[tool.poetry.extras]
cli = ["rich"]

[tool.poetry.scripts]
midi-diff = "midi_diff.cli:cli"
