[tool.poetry]
name = "midi-diff"
version = "1.0.8"
description = "Output the differences between two MIDI files, using the command-line."
authors = ["Taylor-Jayde Blackstone <t.blackstone@inspyre.tech>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
mido = ">=1.3.3,<2.0.0"
rich = { version = ">=13.0.0,<14.0.0", optional = true }

[tool.poetry.extras]
cli = ["rich"]

[tool.poetry.scripts]
midi-diff = "midi_diff.cli:cli"

[tool.poetry.group.dev.dependencies]
sphinx = ">=7.0,<9.0"
sphinx-rtd-theme = ">=2.0,<3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
